css/mem.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.title {
    text-align: center;
    font-weight: bolder;
    color: rgb(15, 58, 126);
    font-size: 50px
}

body {
    width: 100%;
    height: 75%;
    margin: 0;
    padding: 0;
    display: flex;
    background: rgb(75, 13, 100);
    background: linear-gradient(rgb(192, 12, 12),rgb(3, 3, 207),rgb(70, 231, 6));
    background-repeat: no-repeat;
    background-attachment: fixed;
    
    /* height: 80vh;
    display: flex;
    background: rgb(75, 13, 100);*/
}
.shooter {
    width: 100%;
    height: auto;
}
.footer-img {
    /* display: block; */
    margin-left: auto;
    margin-right: auto;
    width: 200px;
    position: absolute;
    height: auto;
    justify-content: center;
    
}
.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: 0 auto;
}

.memory-game {
    width: 700px;
    height: 700px;
    margin: auto;
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
    perspective: 800px;
}

/*psuedo class learned about this last week with Judi */
.memory-card {
    width: calc(25% - 10px);
    height: calc(33.333% - 10px);
    margin: 5px;
    position: relative;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform .5s;
}

.memory-card:active {
    transform: scale(.97);
    transition: transform .2s;
}

.memory-card.flip {
    transform: rotateY(180deg);
}

.front-face,
.back-face {
    width: 100%;
    height: 100%;
    padding: 20px;
    position: absolute;
    border-radius: 5px;
    background: rgb(5, 11, 102);
    border: 2px solid rgba(90, 138, 228, 0.89);
    backface-visibility: hidden;
}

.front-face {
    transform: rotateY(180deg);
}

/*score panel*/
.scoreheader {
    text-align: left;
    width: 350;
    margin-bottom: 5px;
    margin-left: 5px;
}

.scoreheader .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 15px 0 0;
}

.scoreheader .stars li {
    list-style: none;
    display: inline-block;
    color: yellow;
    font-size: 30;
}

#resetBtn {
    float: center;
    cursor: pointer;
    /* padding-left: 70px; */
    font-size: 30px;
    /* margin-left: 15em; */
  
}

.scoreheader .moves {
    font-size: 30px;
    color: wheat;
    margin-right: auto;
}

.scoreheader .move {
    font-size: 20px;
    color: rgb(7, 170, 94);
    margin-left: em10px;
}

.scoreheader .timer {
    font-size: 30px;
    color: white;
    margin-left: 1em;
}

/*Modal - Brad Traversy https://www.youtube.com/watch?v=6ophW7Ask_0*/
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 27px;
    line-height: 1.6;
}

.button {
    background-color: rgb(20, 163, 92);
    padding: 1em 2em;
    color: #fff;
    border: 0;
}

.replay {
    background-color: rgb(20, 163, 92);
    padding: 1em 2em;
    color: #fff;
    border: 0;
    /* margin-left: 14em; */
}

.button:hover {
    background: rgb(0, 12, 4);
}

.modal {
    position:absolute;
    display: none;
    z-index: 1;
    top:100px;
    width: 100%;
    height: 100%;
    /*overflow: auto;*/
    background-color: rgba(7, 1, 17, 0.4);
}

.modal-content {
    background-color: #15f032;
    /*margin: 30% auto;*/
    width: 40%;
    margin: auto;
    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
    animation-name: modalopen;
    animation-duration: 3s;
    text-align: center;
}

.modal-header h2,
.modal-footer h3 {
    /*margin: 0;*/
}

.modal-header {
    background: blueviolet;
    background: linear-gradient(rgb(9, 143, 27), rgb(51, 33, 151));
    padding: 15px;
    color: #f4f4f4;
    text-align: center;
}

.modal-body {
    padding: 10px 20px;
}

.modal-footer {
    
    background: linear-gradient(rgb(14, 214, 7),rgb(138, 2, 2),rgb(4, 2, 105));
    padding: 10px;
    color: #f4f4f4;
    text-align: center;
}

.closeBtn {
    color: rgb(46, 21, 92);
    float: right;
    font-size: 30px;
    color: wheat;
}

.closeBtn:hover,
.closeBtn:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

@keyframes modalopen {
    from {
        opacity: 0
    }

    to {
        opacity: 1
    }
/* }
.modalStars {
    list-style: none;
    display: inline-block;
} */

